2.2 / <not released yet>

 - New
   - Detection of 32-bit / 64-bit kernel interface counters for improving
     traffic calculations in rollover situations, cfg: 64bitInterfaceCounters


2.1 / 6-Dec-2018

 - Fixed
   - --oneline could segmentation fault if database had total traffic values
     set but didn't have any daily or monthly traffic (Arch bug #60588)
   - No proper error message was produced when querying interface which didn't
     exist in the database
   - Several typos and spelling mistakes in documentation
   - Daemon:waittimesync_does_not_wait_with_new_interfaces test was failing if
     the system used a time zone with a negative numeric value
   - Traffic estimate and average rate for ongoing month was not being
     calculated correctly when MonthRotate had a value greater than 1
   - Accuracy of traffic estimate and average rate for the ongoing month could
     be slightly skewed depending on the used time zone
 - New
   - Remove possible PollInterval and UpdateInterval drift over time
   - Sync SaveInterval to full minutes


2.0 / 21-Oct-2018

 - Fixed
   - Data rate calculations when using SI decimal prefixes
   - Workaround for filled arcs not drawn correctly with some versions
     of libgd (libgd/libgd#351)
 - New
   - C struct dump database has been replaced with sqlite database,
     full data import included from legacy databases of versions 1.3 - 1.18
   - User configurable data retention durations for all resolutions with
     following changed defaults:
                   v1.18     v2.0
       5 minutes     n/a      576   (48 hours)
       hours          24       96   (4 days)
       days           30       62   (2 full months)
       months         12       25   (2 full years)
       years         n/a      all
       top days       10       20
   - Option to select units to use SI decimal prefixes using calculations
     with powers of 1000 (IEC and JEDEC prefixes use powers of 1024)
   - Yearly and 5 minute resolution statistics